--- a/myblog/posts/templates/posts/post_detail.html
+++ b/myblog/posts/templates/posts/post_detail.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-    {{ post }}
-</body>
-</html>
+{% extends 'posts/base.html' %}
+
+{% block content%}
+    <div class="row">
+            <img src="{{ post.image.url }}" class="img-responsive">
+        </div>
+        <div class="row">
+            <h2>{{ post.title }} <small>Written by- {{ post.author }}</small></h2>
+            <p>{{ post.description }}</p>
+        </div>
+        <a href="/posts/"><button class="btn btn-default">Go back to all posts</button></a>
+{% endblock content %}
