--- a/myblog/posts/templates/posts/posts_create.html
+++ b/myblog/posts/templates/posts/posts_create.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{% extends 'posts/base.html' %}
+
+{% block content%}
+    <h1>Create a New Blog Post</h1>
     <form method = "POST" action= "." enctype = "multipart/form-data">
         {% csrf_token %}
         {{ form.as_p}}
         <input type="submit" name = "submit">
     </form>
-</body>
-</html>
+{% endblock content %}
