--- a/myblog/posts/templates/posts/posts_list.html
+++ b/myblog/posts/templates/posts/posts_list.html
@@ -1,9 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-    {{ all_posts }}
-</body>
-</html>
+{% extends 'posts/base.html' %}
+
+{% block content%}
+    {% for post in all_posts %}
+        <div class="row">
+            <img src="{{ post.image.url }}" class="img-responsive">
+        </div>
+        <div class="row">
+            <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a> <small>Written by- {{ post.author }}</small></h2>
+        </div>
+        <hr>
+    {% endfor %}
+{% endblock content %}
