--- a/myblog/posts/templates/posts/base.html
+++ b/myblog/posts/templates/posts/base.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <div class="container">
+        {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+
         <div class="row">
             <div class="col-sm-10 col-sm-offset-5">
                 {% block content %}
