--- a/myblog/posts/templates/posts/post_detail.html
+++ b/myblog/posts/templates/posts/post_detail.html
@@ -1,12 +1,19 @@
 {% extends 'posts/base.html' %}
 
 {% block content%}
-    <div class="row">
-            <img src="{{ post.image.url }}" class="img-responsive">
-        </div>
+    
         <div class="row">
-            <h2>{{ post.title }} <small>Written by- {{ post.author }}</small></h2>
+            <h1>{{ post.title }} </div></h1>
+            <div class = "row">
+            <h5><u>Written by- </u><b>{{ post.author }}</b></h5></div>
+            <br>
+            <div class="row">
+            <img src="{{ post.image.url }}" class="img-responsive">
+            <br></div>
+            <br><div class="row">
             <p>{{ post.description }}</p>
         </div>
-        <a href="/posts/"><button class="btn btn-default">Go back to all posts</button></a>
+        <a href="/posts/"><button class="btn btn-primary">Go back to all posts</button></a>
+        <a href="{{post.get_delete_url}}"><button class="btn btn-default">Delete</button></a>
+        <a href="{{post.get_update_url}}"><button class="btn btn-default">Update</button></a>
 {% endblock content %}
